Understanding of photo rotate and z-index issue
Rotation gives image a z-index a stacking context.  Absolute position in nav also has stacking context.  So nav needed a positive z-index to stay over photo when scrolling

--- a/styles.css
+++ b/styles.css
@@ -87,8 +87,6 @@ header .atl-images {
 
 header .rotate{
   transform: rotate(180deg);
-  position: relative;
-  z-index: 1;
 
 }
 
